--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -2,12 +2,13 @@
 
 .randomchar {
     display: grid;
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 50%); // 2 колонки по 50%
+    align-items: center;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.25);
     &__block {
         padding: 40px 35px;
         display: grid;
-        grid-template-columns: 180px auto;
+        grid-template-columns: 180px auto; // 2 колонки: первая фиксированная 180px, вторая занимает оставшееся пространство
         column-gap: 30px;
     }
     &__img {
@@ -17,8 +18,8 @@
     }
     &__info {
         display: grid;
-        grid-template-rows: minmax(29px, auto) 90px 38px;
-        row-gap: 10px;
+        grid-template-rows: minmax(29px, auto) 90px 38px; // 3 строки: первая от 29px до auto, вторая фиксированная 90px, третья фиксированная 38px
+        row-gap: 10px; // расстояние между строками
         padding-top: 3px;
     }
     &__name {
